# serializer version: 1
# name: test_build_example
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-961b4c22/example-961b4c22-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_961b4c22"]
        
        [project]
        name = "example-961b4c22"
        version = "0.0.0"
        dependencies = [
            '''example-a-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = '''This is an example scenario, in which the user depends on a single package `a` which requires `b`.'''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/src/example_961b4c22/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_961b4c22"]
        
        [project]
        name = "example-a-961b4c22"
        version = "1.0.0"
        dependencies = [
            '''example-b-961b4c22>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-a-961b4c22-1.0.0/src/example_a_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-1.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-2.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_961b4c22"]
        
        [project]
        name = "example-b-961b4c22"
        version = "3.0.0"
        dependencies = [
            '''example-c-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-b-961b4c22-3.0.0/src/example_b_961b4c22/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-961b4c22/example_961b4c22-0.0.0.tar.gz': 'md5:78387c54dc1123fc169bde1ad63aa11b',
      'dist/example-961b4c22/example_a_961b4c22-1.0.0-py3-none-any.whl': 'md5:688872585dffc70638c7780f03147a2e',
      'dist/example-961b4c22/example_a_961b4c22-1.0.0.tar.gz': 'md5:8ed996db89e98df9b698f9e90bec5038',
      'dist/example-961b4c22/example_b_961b4c22-1.0.0-py3-none-any.whl': 'md5:e8b10e891619ae3f591fba6dfcac1458',
      'dist/example-961b4c22/example_b_961b4c22-1.0.0.tar.gz': 'md5:6a6fe7b8bb871d712dc7883dc0cb0d68',
      'dist/example-961b4c22/example_b_961b4c22-2.0.0-py3-none-any.whl': 'md5:6d052c40445daed79dcbac2f7ccdf801',
      'dist/example-961b4c22/example_b_961b4c22-2.0.0.tar.gz': 'md5:82b9995b2b3738d5975416105d1ab986',
      'dist/example-961b4c22/example_b_961b4c22-3.0.0-py3-none-any.whl': 'md5:f5ed4e0fb9dc2f029028f22d6903ea98',
      'dist/example-961b4c22/example_b_961b4c22-3.0.0.tar.gz': 'md5:56f1ef2dedf69f360c55297e9d9b1f20',
      'tree': '''
        test_build_example0
        ├── build
        │   └── example-961b4c22
        │       ├── example-961b4c22-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_961b4c22
        │       │           └── __init__.py
        │       ├── example-a-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_961b4c22
        │       │           └── __init__.py
        │       ├── example-b-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_961b4c22
        │       │           └── __init__.py
        │       ├── example-b-961b4c22-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_961b4c22
        │       │           └── __init__.py
        │       └── example-b-961b4c22-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_961b4c22
        │                   └── __init__.py
        └── dist
            └── example-961b4c22
                ├── example_961b4c22-0.0.0.tar.gz
                ├── example_a_961b4c22-1.0.0-py3-none-any.whl
                ├── example_a_961b4c22-1.0.0.tar.gz
                ├── example_b_961b4c22-1.0.0-py3-none-any.whl
                ├── example_b_961b4c22-1.0.0.tar.gz
                ├── example_b_961b4c22-2.0.0-py3-none-any.whl
                ├── example_b_961b4c22-2.0.0.tar.gz
                ├── example_b_961b4c22-3.0.0-py3-none-any.whl
                └── example_b_961b4c22-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-961b4c22
  
    ''',
  })
# ---
# name: test_build_example_already_exists
  dict({
    'exit_code': 1,
    'filesystem': dict({
      'tree': '''
        test_build_example_already_exi0
        └── build
            └── example-961b4c22
        
        2 directories
  
      ''',
    }),
    'stderr': '''
      Building 'example-961b4c22' in directory '[PWD]/build/example-961b4c22'
      Destination directory '[PWD]/build/example-961b4c22' already exists. Pass `--force` to allow removal.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_example_already_exists_with_rm_flag
  dict({
    'exit_code': 2,
    'stderr': '<not included>',
    'stdout': '',
  })
# ---
# name: test_build_example_short_names
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-961b4c22/a-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/a-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/a_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/a_961b4c22"]
        
        [project]
        name = "a-961b4c22"
        version = "1.0.0"
        dependencies = [
            '''b-961b4c22>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/a-961b4c22-1.0.0/src/a_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/b-961b4c22-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/b-961b4c22-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_961b4c22"]
        
        [project]
        name = "b-961b4c22"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/b-961b4c22-1.0.0/src/b_961b4c22/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-961b4c22/b-961b4c22-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/b-961b4c22-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_961b4c22"]
        
        [project]
        name = "b-961b4c22"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/b-961b4c22-2.0.0/src/b_961b4c22/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-961b4c22/b-961b4c22-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/b-961b4c22-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/b_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/b_961b4c22"]
        
        [project]
        name = "b-961b4c22"
        version = "3.0.0"
        dependencies = [
            '''c-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/b-961b4c22-3.0.0/src/b_961b4c22/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_961b4c22"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_961b4c22"]
        
        [project]
        name = "example-961b4c22"
        version = "0.0.0"
        dependencies = [
            '''a-961b4c22''',
        ]
        requires-python = ">=3.8"
        description = '''This is an example scenario, in which the user depends on a single package `a` which requires `b`.'''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-961b4c22/example-961b4c22-0.0.0/src/example_961b4c22/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'dist/example-961b4c22/a_961b4c22-1.0.0-py3-none-any.whl': 'md5:30c68e1e3d4eab1692f5178280582e1f',
      'dist/example-961b4c22/a_961b4c22-1.0.0.tar.gz': 'md5:82fbb6a7e47cb65004d7e1ed960e571a',
      'dist/example-961b4c22/b_961b4c22-1.0.0-py3-none-any.whl': 'md5:f09ee892eefa7ace706e411a2a622134',
      'dist/example-961b4c22/b_961b4c22-1.0.0.tar.gz': 'md5:b0c6c32380822d4fd18549079586737e',
      'dist/example-961b4c22/b_961b4c22-2.0.0-py3-none-any.whl': 'md5:e263d60668430a4fa11c12bf6e69b366',
      'dist/example-961b4c22/b_961b4c22-2.0.0.tar.gz': 'md5:60eb62ac37488a6c4106b153b955b9c8',
      'dist/example-961b4c22/b_961b4c22-3.0.0-py3-none-any.whl': 'md5:fe0c25c798c178972a4f0256bd81d946',
      'dist/example-961b4c22/b_961b4c22-3.0.0.tar.gz': 'md5:f716df3ed041ab73dacc064313708f02',
      'dist/example-961b4c22/example_961b4c22-0.0.0.tar.gz': 'md5:770dff7d79ec4d77b36c632cafa3a056',
      'tree': '''
        test_build_example_short_names0
        ├── build
        │   └── example-961b4c22
        │       ├── a-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── a_961b4c22
        │       │           └── __init__.py
        │       ├── b-961b4c22-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_961b4c22
        │       │           └── __init__.py
        │       ├── b-961b4c22-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_961b4c22
        │       │           └── __init__.py
        │       ├── b-961b4c22-3.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── b_961b4c22
        │       │           └── __init__.py
        │       └── example-961b4c22-0.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_961b4c22
        │                   └── __init__.py
        └── dist
            └── example-961b4c22
                ├── a_961b4c22-1.0.0-py3-none-any.whl
                ├── a_961b4c22-1.0.0.tar.gz
                ├── b_961b4c22-1.0.0-py3-none-any.whl
                ├── b_961b4c22-1.0.0.tar.gz
                ├── b_961b4c22-2.0.0-py3-none-any.whl
                ├── b_961b4c22-2.0.0.tar.gz
                ├── b_961b4c22-3.0.0-py3-none-any.whl
                ├── b_961b4c22-3.0.0.tar.gz
                └── example_961b4c22-0.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-961b4c22
  
    ''',
  })
# ---
# name: test_build_example_with_seed
  dict({
    'exit_code': 0,
    'filesystem': dict({
      'build/example-7661fdb8/example-7661fdb8-0.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-7661fdb8/example-7661fdb8-0.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_7661fdb8"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_7661fdb8"]
        
        [project]
        name = "example-7661fdb8"
        version = "0.0.0"
        dependencies = [
            '''example-a-7661fdb8''',
        ]
        requires-python = ">=3.8"
        description = '''This is an example scenario, in which the user depends on a single package `a` which requires `b`.'''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-7661fdb8/example-7661fdb8-0.0.0/src/example_7661fdb8/__init__.py': '''
        __version__ = "0.0.0"
  
      ''',
      'build/example-7661fdb8/example-a-7661fdb8-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-7661fdb8/example-a-7661fdb8-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_a_7661fdb8"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_a_7661fdb8"]
        
        [project]
        name = "example-a-7661fdb8"
        version = "1.0.0"
        dependencies = [
            '''example-b-7661fdb8>1.0.0''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-7661fdb8/example-a-7661fdb8-1.0.0/src/example_a_7661fdb8/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-1.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-1.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_7661fdb8"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_7661fdb8"]
        
        [project]
        name = "example-b-7661fdb8"
        version = "1.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-1.0.0/src/example_b_7661fdb8/__init__.py': '''
        __version__ = "1.0.0"
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-2.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-2.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_7661fdb8"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_7661fdb8"]
        
        [project]
        name = "example-b-7661fdb8"
        version = "2.0.0"
        dependencies = []
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-2.0.0/src/example_b_7661fdb8/__init__.py': '''
        __version__ = "2.0.0"
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-3.0.0/.gitignore': '''
        __pycache__
        *.pyc
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-3.0.0/pyproject.toml': '''
        [build-system]
        requires = ["hatchling"]
        build-backend = "hatchling.build"
        
        [tool.hatch.build.targets.wheel]
        packages = ["src/example_b_7661fdb8"]
        
        [tool.hatch.build.targets.sdist]
        only-include = ["src/example_b_7661fdb8"]
        
        [project]
        name = "example-b-7661fdb8"
        version = "3.0.0"
        dependencies = [
            '''example-c-7661fdb8''',
        ]
        requires-python = ">=3.8"
        description = ''''''
        
        [project.optional-dependencies]
  
      ''',
      'build/example-7661fdb8/example-b-7661fdb8-3.0.0/src/example_b_7661fdb8/__init__.py': '''
        __version__ = "3.0.0"
  
      ''',
      'dist/example-7661fdb8/example_7661fdb8-0.0.0.tar.gz': 'md5:028f372c7482f37edfbc8490f89d881e',
      'dist/example-7661fdb8/example_a_7661fdb8-1.0.0-py3-none-any.whl': 'md5:d96461d1d46d3e33833ec11d3b59553f',
      'dist/example-7661fdb8/example_a_7661fdb8-1.0.0.tar.gz': 'md5:8df15e04d35c06db3f5e5aa940a95a4e',
      'dist/example-7661fdb8/example_b_7661fdb8-1.0.0-py3-none-any.whl': 'md5:503a2eb402f81160793183b3e89356eb',
      'dist/example-7661fdb8/example_b_7661fdb8-1.0.0.tar.gz': 'md5:8c415e5939a6a707046799465c67fda9',
      'dist/example-7661fdb8/example_b_7661fdb8-2.0.0-py3-none-any.whl': 'md5:c1ff69470a994ee40e43c9a9d88b64b9',
      'dist/example-7661fdb8/example_b_7661fdb8-2.0.0.tar.gz': 'md5:5c44cfb26db7c07c846c1a1dc39aeeda',
      'dist/example-7661fdb8/example_b_7661fdb8-3.0.0-py3-none-any.whl': 'md5:85385be7885a6d8ec10bd5a134c3c316',
      'dist/example-7661fdb8/example_b_7661fdb8-3.0.0.tar.gz': 'md5:0294ccfa865be65ea82ee929dcb27b70',
      'tree': '''
        test_build_example_with_seed0
        ├── build
        │   └── example-7661fdb8
        │       ├── example-7661fdb8-0.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_7661fdb8
        │       │           └── __init__.py
        │       ├── example-a-7661fdb8-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_a_7661fdb8
        │       │           └── __init__.py
        │       ├── example-b-7661fdb8-1.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_7661fdb8
        │       │           └── __init__.py
        │       ├── example-b-7661fdb8-2.0.0
        │       │   ├── .gitignore
        │       │   ├── pyproject.toml
        │       │   └── src
        │       │       └── example_b_7661fdb8
        │       │           └── __init__.py
        │       └── example-b-7661fdb8-3.0.0
        │           ├── .gitignore
        │           ├── pyproject.toml
        │           └── src
        │               └── example_b_7661fdb8
        │                   └── __init__.py
        └── dist
            └── example-7661fdb8
                ├── example_7661fdb8-0.0.0.tar.gz
                ├── example_a_7661fdb8-1.0.0-py3-none-any.whl
                ├── example_a_7661fdb8-1.0.0.tar.gz
                ├── example_b_7661fdb8-1.0.0-py3-none-any.whl
                ├── example_b_7661fdb8-1.0.0.tar.gz
                ├── example_b_7661fdb8-2.0.0-py3-none-any.whl
                ├── example_b_7661fdb8-2.0.0.tar.gz
                ├── example_b_7661fdb8-3.0.0-py3-none-any.whl
                └── example_b_7661fdb8-3.0.0.tar.gz
        
        19 directories, 24 files
  
      ''',
    }),
    'stderr': '<not included>',
    'stdout': '''
      example-7661fdb8
  
    ''',
  })
# ---
# name: test_build_invalid_target
  dict({
    'exit_code': 1,
    'stderr': '''
      File at '[PWD]/test.json' is not a valid scenario: Input data was truncated.
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_no_target
  dict({
    'exit_code': 2,
    'stderr': '''
      usage: packse build [-h] [--force] [--short-names] [--no-hash] [--skip-root]
                          [-v] [-q]
                          targets [targets ...]
      packse build: error: the following arguments are required: targets
  
    ''',
    'stdout': '',
  })
# ---
# name: test_build_target_does_not_exist
  dict({
    'exit_code': 1,
    'stderr': '''
      File 'foo' not found.
  
    ''',
    'stdout': '',
  })
# ---
